fix layout issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -298,9 +298,7 @@ body {
     padding: 2rem;
   }
 
-  .all-lists {
-    margin: auto;
-  }
+  
 
   .todo-container {
     width: auto;
